// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox should handle events on random button 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-76vfru {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-76vfru::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:hover,
.cache-76vfru:focus {
  border-color: #4f0599;
}

.cache-76vfru:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-76vfru::-webkit-input-placeholder {
  opacity: 1;
}

.cache-76vfru::-moz-placeholder {
  opacity: 1;
}

.cache-76vfru:-ms-input-placeholder {
  opacity: 1;
}

.cache-76vfru::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-76vfru e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should handle events on toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-76vfru {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-76vfru::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:hover,
.cache-76vfru:focus {
  border-color: #4f0599;
}

.cache-76vfru:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-76vfru::-webkit-input-placeholder {
  opacity: 1;
}

.cache-76vfru::-moz-placeholder {
  opacity: 1;
}

.cache-76vfru:-ms-input-placeholder {
  opacity: 1;
}

.cache-76vfru::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-76vfru e18bmnpq0"
        name="password"
        type="text"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Hide"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-z56ona {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-z56ona::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona:hover,
.cache-z56ona:focus {
  border-color: #4f0599;
}

.cache-z56ona:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-z56ona::-webkit-input-placeholder {
  opacity: 1;
}

.cache-z56ona::-moz-placeholder {
  opacity: 1;
}

.cache-z56ona:-ms-input-placeholder {
  opacity: 1;
}

.cache-z56ona::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-z56ona e18bmnpq0"
        type="text"
        value=""
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly disabled true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-13a6wu9 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-13a6wu9::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13a6wu9::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13a6wu9:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13a6wu9::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13a6wu9:hover,
.cache-13a6wu9:focus {
  border-color: #4f0599;
}

.cache-13a6wu9:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-13a6wu9::-webkit-input-placeholder {
  opacity: 1;
}

.cache-13a6wu9::-moz-placeholder {
  opacity: 1;
}

.cache-13a6wu9:-ms-input-placeholder {
  opacity: 1;
}

.cache-13a6wu9::placeholder {
  opacity: 1;
}

.cache-1g7upxo {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #d4dae7;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-13a6wu9 e18bmnpq0"
        disabled=""
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1g7upxo e18bmnpq3"
        disabled=""
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly error string 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1twkl {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #dd3252;
}

.cache-1twkl::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1twkl::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1twkl:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1twkl::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1twkl:hover,
.cache-1twkl:focus {
  border-color: #4f0599;
}

.cache-1twkl:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1twkl::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1twkl::-moz-placeholder {
  opacity: 1;
}

.cache-1twkl:-ms-input-placeholder {
  opacity: 1;
}

.cache-1twkl::placeholder {
  opacity: 1;
}

.cache-1twkl:hover,
.cache-1twkl:focus {
  border-color: #a6102d;
}

.cache-1twkl:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
  border-color: #dd3252;
}

.cache-1iem6f0 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #dd3252;
}

.cache-9xime5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-9xime5.cache-9xime5 {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1twkl e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1iem6f0 e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-9xime5"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-z56ona {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-z56ona::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona:hover,
.cache-z56ona:focus {
  border-color: #4f0599;
}

.cache-z56ona:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-z56ona::-webkit-input-placeholder {
  opacity: 1;
}

.cache-z56ona::-moz-placeholder {
  opacity: 1;
}

.cache-z56ona:-ms-input-placeholder {
  opacity: 1;
}

.cache-z56ona::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-label="Test"
        autocomplete="on"
        class="cache-z56ona e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-z56ona {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-z56ona::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z56ona:hover,
.cache-z56ona:focus {
  border-color: #4f0599;
}

.cache-z56ona:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-z56ona::-webkit-input-placeholder {
  opacity: 1;
}

.cache-z56ona::-moz-placeholder {
  opacity: 1;
}

.cache-z56ona:-ms-input-placeholder {
  opacity: 1;
}

.cache-z56ona::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-z56ona e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 3`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-nq01ik {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-nq01ik::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:hover,
.cache-nq01ik:focus {
  border-color: #4f0599;
}

.cache-nq01ik:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-nq01ik::-webkit-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::-moz-placeholder {
  opacity: 1;
}

.cache-nq01ik:-ms-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-nq01ik e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly multiline true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1ftyslv {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: initial;
  resize: none;
  padding-top: 8px;
}

.cache-1ftyslv::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ftyslv::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ftyslv:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ftyslv::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ftyslv:hover,
.cache-1ftyslv:focus {
  border-color: #4f0599;
}

.cache-1ftyslv:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1ftyslv::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ftyslv::-moz-placeholder {
  opacity: 1;
}

.cache-1ftyslv:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ftyslv::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-1ftyslv e18bmnpq0"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly required true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-pkzo3z {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-pkzo3z::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pkzo3z::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pkzo3z:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pkzo3z::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pkzo3z:hover,
.cache-pkzo3z:focus {
  border-color: #4f0599;
}

.cache-pkzo3z:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-pkzo3z::-webkit-input-placeholder {
  opacity: 1;
}

.cache-pkzo3z::-moz-placeholder {
  opacity: 1;
}

.cache-pkzo3z:-ms-input-placeholder {
  opacity: 1;
}

.cache-pkzo3z::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-d2t1jx {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
}

.cache-d2t1jx:hover,
.cache-d2t1jx:focus-within {
  color: #c4c9d6;
}

.cache-jlcm9f {
  fill: #ef5774;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-jlcm9f.cache-jlcm9f {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-pkzo3z e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
      <div
        class="cache-d2t1jx e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-jlcm9f"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with ariaControls 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-15jw8e8 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-15jw8e8::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:hover,
.cache-15jw8e8:focus {
  border-color: #4f0599;
}

.cache-15jw8e8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-controls="test-control"
        aria-labelledby="test-control"
        autocomplete="on"
        class="cache-15jw8e8 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
        id="test-control"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-nq01ik {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-nq01ik::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:hover,
.cache-nq01ik:focus {
  border-color: #4f0599;
}

.cache-nq01ik:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-nq01ik::-webkit-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::-moz-placeholder {
  opacity: 1;
}

.cache-nq01ik:-ms-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-nq01ik e18bmnpq0"
        id="test"
        placeholder="type..."
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with defaultValue true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-15jw8e8 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-15jw8e8::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:hover,
.cache-15jw8e8:focus {
  border-color: #4f0599;
}

.cache-15jw8e8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-15jw8e8 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with edit true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-nq01ik {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-nq01ik::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:hover,
.cache-nq01ik:focus {
  border-color: #4f0599;
}

.cache-nq01ik:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-nq01ik::-webkit-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::-moz-placeholder {
  opacity: 1;
}

.cache-nq01ik:-ms-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-nq01ik e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with fillAvailable true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-15jw8e8 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-15jw8e8::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:hover,
.cache-15jw8e8:focus {
  border-color: #4f0599;
}

.cache-15jw8e8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-15jw8e8 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with generated true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-nq01ik {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-nq01ik::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:hover,
.cache-nq01ik:focus {
  border-color: #4f0599;
}

.cache-nq01ik:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-nq01ik::-webkit-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::-moz-placeholder {
  opacity: 1;
}

.cache-nq01ik:-ms-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-nq01ik e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with height prop 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-nq01ik {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-nq01ik::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:hover,
.cache-nq01ik:focus {
  border-color: #4f0599;
}

.cache-nq01ik:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-nq01ik::-webkit-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::-moz-placeholder {
  opacity: 1;
}

.cache-nq01ik:-ms-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-nq01ik e18bmnpq0"
        style="height: 90px;"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with notice 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-nq01ik {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-nq01ik::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-nq01ik:hover,
.cache-nq01ik:focus {
  border-color: #4f0599;
}

.cache-nq01ik:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-nq01ik::-webkit-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::-moz-placeholder {
  opacity: 1;
}

.cache-nq01ik:-ms-input-placeholder {
  opacity: 1;
}

.cache-nq01ik::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

.cache-1rto160 {
  color: #b2b6c3;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1rto160.cache-1rto160 {
  margin-top: 8px;
}

.cache-bkobgy {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-bkobgy.cache-bkobgy {
  vertical-align: top;
  margin-right: 8px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-nq01ik e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
    <div
      class="e1qg14600 cache-1rto160"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-bkobgy"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
      <div
        class="ejtitxs0 cache-ykhhhn"
      >
        <p>
          <span>
            Test notice
          </span>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with null right component 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-yir09p {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-yir09p::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yir09p::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yir09p:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yir09p::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yir09p:hover,
.cache-yir09p:focus {
  border-color: #4f0599;
}

.cache-yir09p:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-yir09p::-webkit-input-placeholder {
  opacity: 1;
}

.cache-yir09p::-moz-placeholder {
  opacity: 1;
}

.cache-yir09p:-ms-input-placeholder {
  opacity: 1;
}

.cache-yir09p::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1e71fue {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  pointer-events: auto;
}

.cache-1e71fue:hover,
.cache-1e71fue:focus-within {
  color: #c4c9d6;
}

.cache-1e71fue>button {
  box-shadow: none!important;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-yir09p e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-1e71fue e18bmnpq4"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with readOnly true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-b68uan {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  background-color: #e6e9f0;
  border-color: #f6f6f8;
  color: #4a4f62;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-b68uan::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b68uan::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b68uan:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b68uan::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b68uan:hover,
.cache-b68uan:focus {
  border-color: #4f0599;
}

.cache-b68uan:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-10d8dwx {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #c4c9d6;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-b68uan e18bmnpq0"
        name="test"
        readonly=""
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-10d8dwx e18bmnpq3"
        readonly=""
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-b0b29g {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-b0b29g::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g:hover,
.cache-b0b29g:focus {
  border-color: #4f0599;
}

.cache-b0b29g:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-q8zp5m {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-q8zp5m:hover,
.cache-q8zp5m:focus-within {
  color: #c4c9d6;
}

.cache-13yy6kn {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #f6f6f8;
}

.cache-a9x6v4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-a9x6v4.cache-a9x6v4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-b0b29g e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-q8zp5m e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-13yy6kn"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-a9x6v4"
        >
          px
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px and required 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1bmtaan {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-1bmtaan::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1bmtaan::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1bmtaan:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1bmtaan::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1bmtaan:hover,
.cache-1bmtaan:focus {
  border-color: #4f0599;
}

.cache-1bmtaan:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-q8zp5m {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-q8zp5m:hover,
.cache-q8zp5m:focus-within {
  color: #c4c9d6;
}

.cache-13yy6kn {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #f6f6f8;
}

.cache-a9x6v4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-a9x6v4.cache-a9x6v4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-c62r2c {
  fill: #ef5774;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.cache-c62r2c.cache-c62r2c {
  vertical-align: middle;
  margin-left: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1bmtaan e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-q8zp5m e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-13yy6kn"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-a9x6v4"
        >
          px
          <svg
            class="sc-ui-icon etwatq50 cache-c62r2c"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid false 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-15jw8e8 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-15jw8e8::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-15jw8e8:hover,
.cache-15jw8e8:focus {
  border-color: #4f0599;
}

.cache-15jw8e8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-15jw8e8 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-b0b29g {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-b0b29g::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-b0b29g:hover,
.cache-b0b29g:focus {
  border-color: #4f0599;
}

.cache-b0b29g:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-17q904z {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
}

.cache-17q904z:hover,
.cache-17q904z:focus-within {
  color: #c4c9d6;
}

.cache-19wgnhk {
  fill: #45d6b5;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-19wgnhk.cache-19wgnhk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-b0b29g e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-17q904z e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-19wgnhk"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render multiline with props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-9ljinw {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: 100%;
  resize: vertical;
  padding-top: 8px;
}

.cache-9ljinw::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9ljinw::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9ljinw:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9ljinw::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9ljinw:hover,
.cache-9ljinw:focus {
  border-color: #4f0599;
}

.cache-9ljinw:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-9ljinw::-webkit-input-placeholder {
  opacity: 1;
}

.cache-9ljinw::-moz-placeholder {
  opacity: 1;
}

.cache-9ljinw:-ms-input-placeholder {
  opacity: 1;
}

.cache-9ljinw::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-9ljinw e18bmnpq0"
        cols="50"
        rows="10"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render on focus 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-8ewehk {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-top: 20px;
  height: initial;
  resize: vertical;
}

.cache-8ewehk::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-8ewehk::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-8ewehk:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-8ewehk::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-8ewehk:hover,
.cache-8ewehk:focus {
  border-color: #4f0599;
}

.cache-8ewehk:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-8ewehk::-webkit-input-placeholder {
  opacity: 1;
}

.cache-8ewehk::-moz-placeholder {
  opacity: 1;
}

.cache-8ewehk:-ms-input-placeholder {
  opacity: 1;
}

.cache-8ewehk::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-8ewehk e18bmnpq0"
        cols="50"
        id="test"
        rows="10"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-76vfru {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-76vfru::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:hover,
.cache-76vfru:focus {
  border-color: #4f0599;
}

.cache-76vfru:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-76vfru::-webkit-input-placeholder {
  opacity: 1;
}

.cache-76vfru::-moz-placeholder {
  opacity: 1;
}

.cache-76vfru:-ms-input-placeholder {
  opacity: 1;
}

.cache-76vfru::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-76vfru e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1flg1xs {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-1flg1xs::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1flg1xs::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1flg1xs:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1flg1xs::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1flg1xs:hover,
.cache-1flg1xs:focus {
  border-color: #4f0599;
}

.cache-1flg1xs:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1s4sa9c {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #d4dae7;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1flg1xs e18bmnpq0"
        disabled=""
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1s4sa9c e18bmnpq3"
        disabled=""
      >
        test
      </label>
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="true"
          class="e1kgqxfn0 cache-1me4bek"
          disabled=""
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-76vfru {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-76vfru::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76vfru:hover,
.cache-76vfru:focus {
  border-color: #4f0599;
}

.cache-76vfru:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-76vfru::-webkit-input-placeholder {
  opacity: 1;
}

.cache-76vfru::-moz-placeholder {
  opacity: 1;
}

.cache-76vfru:-ms-input-placeholder {
  opacity: 1;
}

.cache-76vfru::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-76vfru e18bmnpq0"
        name="password"
        type="password"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Show"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;
